--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 		<script src="bower_components/angular/angular.js"></script>
 		<!-- endbower -->
 
-		<script src="src/nimagepreloader.module.js"></script>
-		<script src="src/nimagepreloader.directive.js"></script>
+		<script src="src/nfileuploader.module.js"></script>
+		<script src="src/nfileuploader.factory.js"></script>
+		<script src="src/nfileuploader.factory.js"></script>
 
 		<script>
-			angular.module('demoApp', ['nImagePreloader']);
+			angular.module('demoApp', ['nFileUploader']);
 		</script>
 	</body>
 </html>
